// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clock active, low time (8 500 ms — under 10 s threshold) matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0f3460",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      {
        "backgroundColor": "#1a365d",
      },
      {
        "borderColor": "#fc8181",
        "borderWidth": 2,
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "#a0aec0",
        "fontSize": 14,
      }
    }
  >
    ⬜ White
  </Text>
  <Text
    collapsable={false}
    style={
      {
        "color": "#ffffff",
        "fontSize": 28,
        "fontVariant": [
          "tabular-nums",
        ],
        "fontWeight": "bold",
        "opacity": 1,
      }
    }
  >
    0:08.5
  </Text>
</View>
`;

exports[`Clock active, normal time (180 000 ms) matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0f3460",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      {
        "backgroundColor": "#1a365d",
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#a0aec0",
        "fontSize": 14,
      }
    }
  >
    ⬛ Black
  </Text>
  <Text
    collapsable={false}
    style={
      {
        "color": "#ffffff",
        "fontSize": 28,
        "fontVariant": [
          "tabular-nums",
        ],
        "fontWeight": "bold",
        "opacity": 1,
      }
    }
  >
    3:00
  </Text>
</View>
`;

exports[`Clock inactive, low time (8 500 ms) matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0f3460",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      false,
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#a0aec0",
        "fontSize": 14,
      }
    }
  >
    ⬛ Black
  </Text>
  <Text
    collapsable={false}
    style={
      {
        "color": "#fc8181",
        "fontSize": 28,
        "fontVariant": [
          "tabular-nums",
        ],
        "fontWeight": "bold",
        "opacity": 1,
      }
    }
  >
    0:08.5
  </Text>
</View>
`;

exports[`Clock inactive, normal time (180 000 ms) matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0f3460",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      false,
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#a0aec0",
        "fontSize": 14,
      }
    }
  >
    ⬜ White
  </Text>
  <Text
    collapsable={false}
    style={
      {
        "color": "#cbd5e0",
        "fontSize": 28,
        "fontVariant": [
          "tabular-nums",
        ],
        "fontWeight": "bold",
        "opacity": 1,
      }
    }
  >
    3:00
  </Text>
</View>
`;

exports[`Clock with onTap handler renders TouchableOpacity wrapper 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#0f3460",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#1a365d",
        },
        false,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
        }
      }
    >
      ⬜ White
    </Text>
    <Text
      collapsable={false}
      style={
        {
          "color": "#ffffff",
          "fontSize": 28,
          "fontVariant": [
            "tabular-nums",
          ],
          "fontWeight": "bold",
          "opacity": 1,
        }
      }
    >
      3:00
    </Text>
  </View>
</View>
`;

exports[`EvalBar black advantage (-300 cp) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#2d3748",
      "borderRadius": 10,
      "height": 20,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f7fafc",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        {
          "width": "20%",
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#4a5568",
        "fontSize": 11,
        "position": "absolute",
        "right": 8,
        "top": 2,
      }
    }
  >
    -3.0
  </Text>
</View>
`;

exports[`EvalBar equal position (0 cp) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#2d3748",
      "borderRadius": 10,
      "height": 20,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f7fafc",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        {
          "width": "50%",
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#4a5568",
        "fontSize": 11,
        "position": "absolute",
        "right": 8,
        "top": 2,
      }
    }
  >
    0.0
  </Text>
</View>
`;

exports[`EvalBar out-of-range black advantage (-700 cp, clamped to -500) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#2d3748",
      "borderRadius": 10,
      "height": 20,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f7fafc",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        {
          "width": "0%",
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#4a5568",
        "fontSize": 11,
        "position": "absolute",
        "right": 8,
        "top": 2,
      }
    }
  >
    -7.0
  </Text>
</View>
`;

exports[`EvalBar white advantage (+300 cp) matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#2d3748",
      "borderRadius": 10,
      "height": 20,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f7fafc",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        {
          "width": "80%",
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#4a5568",
        "fontSize": 11,
        "position": "absolute",
        "right": 8,
        "top": 2,
      }
    }
  >
    +3.0
  </Text>
</View>
`;

exports[`MoveList empty moves array renders "No moves yet" placeholder 1`] = `
<View
  style={
    {
      "backgroundColor": "#0f3460",
      "maxHeight": 48,
      "paddingVertical": 8,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#718096",
          "fontSize": 13,
          "paddingHorizontal": 12,
        }
      }
    >
      No moves yet
    </Text>
  </View>
</View>
`;

exports[`MoveList four moves (two pairs) renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#0f3460",
      "maxHeight": 48,
      "paddingVertical": 8,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#718096",
            "fontSize": 13,
            "marginRight": 2,
          }
        }
      >
        1
        .
      </Text>
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 13,
            "marginRight": 6,
            "minWidth": 36,
          }
        }
      >
        e4
      </Text>
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 13,
            "marginRight": 6,
            "minWidth": 36,
          }
        }
      >
        e5
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#718096",
            "fontSize": 13,
            "marginRight": 2,
          }
        }
      >
        2
        .
      </Text>
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 13,
            "marginRight": 6,
            "minWidth": 36,
          }
        }
      >
        Nf3
      </Text>
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 13,
            "marginRight": 6,
            "minWidth": 36,
          }
        }
      >
        Nc6
      </Text>
    </View>
  </View>
</View>
`;

exports[`RecapCard black wins matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0f3460",
      "borderRadius": 16,
      "padding": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#4299e1",
        "fontSize": 13,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    BoardSight Chess
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬜
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Player
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        55
        %
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fbd38d",
          "fontSize": 22,
          "fontWeight": "bold",
          "paddingHorizontal": 12,
        }
      }
    >
      0-1
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬛
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Opponent
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        77
        %
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#718096",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    31
     moves · 
    2025-12-25
  </Text>
</View>
`;

exports[`RecapCard draw result matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0f3460",
      "borderRadius": 16,
      "padding": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#4299e1",
        "fontSize": 13,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    BoardSight Chess
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬜
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Stockfish
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        99
        %
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fbd38d",
          "fontSize": 22,
          "fontWeight": "bold",
          "paddingHorizontal": 12,
        }
      }
    >
      1/2-1/2
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬛
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Leela
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        98
        %
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#718096",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    120
     moves · 
    2026-01-01
  </Text>
</View>
`;

exports[`RecapCard white wins — typical props match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0f3460",
      "borderRadius": 16,
      "padding": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#4299e1",
        "fontSize": 13,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    BoardSight Chess
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬜
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Alice
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        91
        %
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fbd38d",
          "fontSize": 22,
          "fontWeight": "bold",
          "paddingHorizontal": 12,
        }
      }
    >
      1-0
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "marginBottom": 4,
          }
        }
      >
        ⬛
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Bob
      </Text>
      <Text
        style={
          {
            "color": "#48bb78",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        84
        %
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#718096",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    42
     moves · 
    2026-03-27
  </Text>
</View>
`;
